Show overflow scrollbars correctly

--- a/src/Editor/CardArea.less
+++ b/src/Editor/CardArea.less
@@ -1,5 +1,5 @@
-@import "../common/Color";
-@import "../common/Dimen";
+@import '../common/Color';
+@import '../common/Dimen';
 
 
 
@@ -23,51 +23,53 @@
 #card-area {
 	display: flex;
 	flex-flow: column nowrap;
-	overflow: scroll;
+	overflow: auto;
 	
 	padding: 8px 0;
-}
-
-.card {
-	box-shadow: 0 2px 4px @color-shadow;
-	border-radius: @card-radius;
-	width: @card-width; height: @card-height;
-	flex-basis: @card-height;
-	flex-grow: 0; flex-shrink: 0;
 	
-	margin: 8px;
-	padding: @card-vertical-padding 0;
+	box-sizing: border-box;
 	
-	background: @card-background-color;
-	
-	line-height: @card-cell-size;
-	
-	display: flex;
-	flex-flow: column nowrap;
-	align-content: stretch;
-
-	header {
-		padding: 0 @card-horizontal-padding;
-		font-weight: bold;
-		flex-basis: 0;
-		flex-grow: 1;
-	}
-	
-	.row {
-		padding: 0 @card-horizontal-padding;
+	.card {
+		box-shadow: 0 2px 4px @color-shadow;
+		border-radius: @card-radius;
+		width: @card-width; height: @card-height;
+		flex-basis: @card-height;
+		flex-grow: 0; flex-shrink: 0;
+		
+		margin: 8px;
+		padding: @card-vertical-padding 0;
+		
+		background: @card-background-color;
+		
+		line-height: @card-cell-size;
+		
 		display: flex;
-		flex-flow: row nowrap;
+		flex-flow: column nowrap;
 		align-content: stretch;
-		
-		flex-basis: 0;
-		flex-grow: 1;
-	}
 
-	.cell {
-		flex-basis: 0;
-		flex-grow: 1;
-		flex-shrink: 1;
+		header {
+			padding: 0 @card-horizontal-padding;
+			font-weight: bold;
+			flex-basis: 0;
+			flex-grow: 1;
+		}
 		
-		outline: solid thin @color-lightBlue100;
+		.row {
+			padding: 0 @card-horizontal-padding;
+			display: flex;
+			flex-flow: row nowrap;
+			align-content: stretch;
+			
+			flex-basis: 0;
+			flex-grow: 1;
+		}
+
+		.cell {
+			flex-basis: 0;
+			flex-grow: 1;
+			flex-shrink: 1;
+			
+			outline: solid thin @color-lightBlue100;
+		}
 	}
 }
